fixed horizontal scrolling

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,4 +1,5 @@
 .footer {
+    max-width: 1184px;
     margin: 0 auto;
     padding: 0 48px;
     display: flex;
@@ -8,6 +9,13 @@
 
 @media (max-width: 1023px) {
     .footer {
+        max-width: 928px;
+    }
+}
+
+@media (max-width: 1023px) {
+    .footer {
+        max-width: 720px;
         padding: 0 24px;
     }
 }
