--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,5 @@
 .header__lang-link {
-    margin-bottom: 6px;
+    margin: 0 0 6px;
     font-style: normal;
     font-weight: 400;
     font-size: 24px;
